--- a/app/src/main/res/layout/activity_second2.xml
+++ b/app/src/main/res/layout/activity_second2.xml
@@ -50,4 +50,10 @@
             android:layout_weight="1"/>
     </LinearLayout>
 
+    <Button
+        android:id="@+id/testOptBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="test" />
+
 </LinearLayout>
